# ek-songs-database

./: .gitignore  README.md  create_lyric_list.py  create_songs_database.py  pyproject.toml  research_song_prompt.md
database/: .gitkeep
resource/: .gitkeep  song_sample.json
