[project]
name = "ek-songs-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
